2006-10-08  Thomas Schwinge  <tschwinge@gnu.org>

	* linux/dev/drivers/scsi/scsi.h: Move file...
	* linux/src/drivers/scsi/scsi.h: ... here.

	* linux/dev/drivers/scsi/seagate.c: Move file...
	* linux/src/drivers/scsi/seagate.c: ... here.

	* linux/dev/drivers/scsi/aha152x.c: Move file...
	* linux/src/drivers/scsi/aha152x.c: ... here.

	* linux/dev/drivers/scsi/sr.c: Move file...
	* linux/src/drivers/scsi/sr.c: ... here.

	* linux/dev/drivers/scsi/sd_ioctl.c: Move file...
	* linux/src/drivers/scsi/sd_ioctl.c: ... here.

	* linux/dev/drivers/scsi/sd.c: Move file...
	* linux/src/drivers/scsi/sd.c: ... here.

	* linux/dev/drivers/scsi/hosts.c: Remove file.
	* linux/dev/drivers/scsi/scsi.c: Likewise.

	* linux/dev/drivers/block/ide.c: Move file...
	* linux/src/drivers/block/ide.c: ... here.

	* linux/dev/drivers/block/ide-cd.c: Remove file.
	* linux/src/drivers/block/ide-cd.c (cdrom_sleep): Don't define function
	`#ifndef MACH'.

2006-10-07  Thomas Schwinge  <tschwinge@gnu.org>

	* i386/linux/configure: Regernerate.
	* i386/linux/device-drivers.h.in: Likewise.

	* Drivers.macros (AC_DRIVER, AC_DRIVER_nodef): Rewrite to allow options
	with dashes in them, make it usable more universally and enhance the
	generated comments in header files.
	* i386/linux/configure.ac (linux_DRIVER, linux_DRIVER_nodef): Enhance
	DESCRIPTION.
	(u1434f): Rename to `u14-34f'.
	(smcultra): Rename to `smc-ultra'.
	(smcultra32): Rename to `smc-ultra32'.
	(hpplus): Rename to `hp-plus'.
	(ne2kpci): Rename to `ne2k-pci'.
	(viarhine): Rename to `via-rhine'.
	(intelgige): Rename to `intel-gige'.
	(winbond840): Rename to `winbond-840'.
	(AC_PCMCIA_OPTION): Remove function.
	(pcmcia-isa): Use `AC_DRIVER' instead of `AC_PCMCIA_OPTION'.
	* i386/README-Drivers: Update accordingly.
	
2006-10-03  Thomas Schwinge  <tschwinge@gnu.org>

	[task #5941 --- ``Linker script for GNU Mach'']

	* Makefile.in (kernel.o): Remove `$(systype)-objfiles-prepend' hackery.
	* i386/Makefile.in (sysdep.a): Likewise.